--- a/assets/media/sitemap/sitemap.html
+++ b/assets/media/sitemap/sitemap.html
@@ -116,24 +116,24 @@
 		<h3>
 <span>Last updated: 2020, June 5<br />
 Total pages: 11</span>
-<a href="http://aromasyangeles.herokuapp.com">aromasyangeles.herokuapp.com Homepage</a>
+<a href="https://aromasyangeles.herokuapp.com">aromasyangeles.herokuapp.com Homepage</a>
 </h3></div>
 	<div id="cont">
 		<ul class="level-0">
 
             <li class="lhead">/  <span class="lcount">11 pages</span></li>
             
-<li class="lpage"><a href="http://aromasyangeles.herokuapp.com/" title="Aromas &amp; Ángeles">Aromas & Ángeles</a></li>
-<li class="lpage"><a href="http://aromasyangeles.herokuapp.com/index.php" title="Aromas &amp; Ángeles">Aromas & Ángeles</a></li>
-<li class="lpage"><a href="http://aromasyangeles.herokuapp.com/productos.php?type=Todos" title="Aromas &amp; Ángeles">Aromas & Ángeles</a></li>
-<li class="lpage"><a href="http://aromasyangeles.herokuapp.com/nosotros.php" title="Aromas &amp; Ángeles">Aromas & Ángeles</a></li>
-<li class="lpage"><a href="http://aromasyangeles.herokuapp.com/productos.php?type=Rituales" title="Aromas &amp; Ángeles">Aromas & Ángeles</a></li>
-<li class="lpage"><a href="http://aromasyangeles.herokuapp.com/productos.php?type=Armonizadores" title="Aromas &amp; Ángeles">Aromas & Ángeles</a></li>
-<li class="lpage"><a href="http://aromasyangeles.herokuapp.com/productos.php?type=AceitesAngelicales" title="Aromas &amp; Ángeles">Aromas & Ángeles</a></li>
-<li class="lpage"><a href="http://aromasyangeles.herokuapp.com/productos.php?type=Esencias" title="Aromas &amp; Ángeles">Aromas & Ángeles</a></li>
-<li class="lpage"><a href="http://aromasyangeles.herokuapp.com/productos.php?type=DifusoresDeAromas" title="Aromas &amp; Ángeles">Aromas & Ángeles</a></li>
-<li class="lpage"><a href="http://aromasyangeles.herokuapp.com/productos.php?type=Velas" title="Aromas &amp; Ángeles">Aromas & Ángeles</a></li>
-<li class="lpage last-page"><a href="http://aromasyangeles.herokuapp.com/productos.php?type=KitEnergetico" title="Aromas &amp; Ángeles">Aromas & Ángeles</a></li>
+<li class="lpage"><a href="https://aromasyangeles.herokuapp.com/" title="Aromas &amp; Ángeles | Inicio">Aromas & Ángeles | Inicio</a></li>
+<li class="lpage"><a href="https://aromasyangeles.herokuapp.com/index.php" title="Aromas &amp; Ángeles | Inicio">Aromas & Ángeles | Inicio</a></li>
+<li class="lpage"><a href="https://aromasyangeles.herokuapp.com/productos.php?type=Todos" title="Aromas &amp; Ángeles | Todos">Aromas & Ángeles | Todos</a></li>
+<li class="lpage"><a href="https://aromasyangeles.herokuapp.com/nosotros.php" title="Aromas &amp; Ángeles | Informacion">Aromas & Ángeles | Informacion</a></li>
+<li class="lpage"><a href="https://aromasyangeles.herokuapp.com/productos.php?type=Rituales" title="Aromas &amp; Ángeles | Rituales">Aromas & Ángeles | Rituales</a></li>
+<li class="lpage"><a href="https://aromasyangeles.herokuapp.com/productos.php?type=Armonizadores" title="Aromas &amp; Ángeles | Armonizadores">Aromas & Ángeles | Armonizadores</a></li>
+<li class="lpage"><a href="https://aromasyangeles.herokuapp.com/productos.php?type=AceitesAngelicales" title="Aromas &amp; Ángeles | AceitesAngelicales">Aromas & Ángeles | AceitesAngelicales</a></li>
+<li class="lpage"><a href="https://aromasyangeles.herokuapp.com/productos.php?type=Esencias" title="Aromas &amp; Ángeles | Esencias">Aromas & Ángeles | Esencias</a></li>
+<li class="lpage"><a href="https://aromasyangeles.herokuapp.com/productos.php?type=DifusoresDeAromas" title="Aromas &amp; Ángeles | DifusoresDeAromas">Aromas & Ángeles | DifusoresDeAromas</a></li>
+<li class="lpage"><a href="https://aromasyangeles.herokuapp.com/productos.php?type=Velas" title="Aromas &amp; Ángeles | Velas">Aromas & Ángeles | Velas</a></li>
+<li class="lpage last-page"><a href="https://aromasyangeles.herokuapp.com/productos.php?type=KitEnergetico" title="Aromas &amp; Ángeles | KitEnergetico">Aromas & Ángeles | KitEnergetico</a></li>
 </ul>
 		<!--
 Please note:
